; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/freertos/real_time_stats/main/extr_real_time_stats_example_main.c_spin_task.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/freertos/real_time_stats/main/extr_real_time_stats_example_main.c_spin_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sync_spin_task = common dso_local global i32 0, align 4
@portMAX_DELAY = common dso_local global i32 0, align 4
@SPIN_ITER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @spin_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spin_task(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @sync_spin_task, align 4
  %5 = load i32, i32* @portMAX_DELAY, align 4
  %6 = call i32 @xSemaphoreTake(i32 %4, i32 %5)
  br label %7

7:                                                ; preds = %1, %16
  store i32 0, i32* %3, align 4
  br label %8

8:                                                ; preds = %13, %7
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @SPIN_ITER, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %8
  call void asm sideeffect "NOP", "~{dirflag},~{fpsr},~{flags}"() #2, !srcloc !2
  br label %13

13:                                               ; preds = %12
  %14 = load i32, i32* %3, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %3, align 4
  br label %8

16:                                               ; preds = %8
  %17 = call i32 @pdMS_TO_TICKS(i32 100)
  %18 = call i32 @vTaskDelay(i32 %17)
  br label %7
}

declare dso_local i32 @xSemaphoreTake(i32, i32) #1

declare dso_local i32 @vTaskDelay(i32) #1

declare dso_local i32 @pdMS_TO_TICKS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 484}
